Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,12 @@ body {
 	padding: 0px;
 	margin: 90px 0 0 0;
   	color: #493c33;
+  	background-color: black;
+	background-size: 1080px;
+	background-image: url("{{ site.baseurl }}/assets/img/book.png");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+  	background-position: center 40px;
 }
 header {
 	margin: 0px;
@@ -97,9 +103,6 @@ h1, h2, h3, h4, h5, h6 {
 	mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
 	overflow-y: scroll;
 	}
-div.indent h4 {
-	border-left: 2px solid #493c33;
-	}
 .indent {
 	margin-left: 50px;
 	}
@@ -111,12 +114,6 @@ div.indent h4 {
 	}
 .wrapper {
 	margin-top: 0px;
-  	background-color: black;
-	background-size: 1080px;
-	background-image: url("{{ site.baseurl }}/assets/img/book.png");
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-  	background-position: center 40px;
 	}
 .box {
 	margin: 5px 20px;
@@ -155,7 +152,7 @@ footer {
 	body {
 		margin: 0;
 		background-size: 95%;
-		background-image: url("{{ site.baseurl }}/assets/img/parchment.png");
+		background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
 		background-repeat: repeat-y;
 	  	background-position: center;
 		background-attachment: scroll;
